# gorbushka-project

./: .gitignore  Dockerfile  Makefile  README.md  capitalization.html  client.html  clients.html  entrypoint.sh  forgot-password.html  login.html  orders.html  pyproject.toml  register.html  report.html  salary.html
assets/css/: styles.min.css
assets/js/: script.min.js
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: filters.py  handlers.py  schemas.py
core/api/v1/finances/: schemas.py
core/api/v1/receipts/: handlers.py  schemas.py
core/api/v1/transaction_requests/: handlers.py
core/api/v1/transactions/: filters.py  handlers.py  schemas.py
core/api/v1/users/: filters.py  handlers.py  schemas.py
core/apps/common/: models.py
core/apps/finances/: admin.py  models.py
core/apps/finances/entities/: finances.py
core/apps/receipts/services/: receipts.py
core/apps/transactions/: admin.py  models.py  views.py
core/apps/transactions/entities/: transactions.py
core/apps/transactions/migrations/: 0001_initial.py  (+5 more)
core/apps/users/: admin.py  models.py
core/project/: urls.py  views.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
staticfiles/js/: api.js  budget.js  capitalization.js  client.js  clients.js  functions.js  login.js  orders.js  purchase.js  report.js  salary.js  script.min.js  template.js
templates/: budget.html  capitalization.html  client.html  clients.html  forgot-password.html  login.html  orders.html  purchase.html  register.html  report.html  salary.html
(+10 files in other folders)
