[tool.poetry]
name = "gorbushka-project"
version = "0.1.0"
description = ""
authors = ["Munewxar <steven.altamirano.work@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
django-ninja = "^1.1.0"
django-phonenumber-field = "^7.3.0"
django-phonenumbers = "^1.0.1"
django-ninja-jwt = "^5.3.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
